master  to main

--- a/README
+++ b/README
@@ -14,7 +14,7 @@ x86 JIT コンパイル機能を持ったC++から呼び出せる簡易組み込
 機械語ではなく中間言語の状態で実行することも出来ます
 が、64bitではコンパイル出来ないと思いますし、出来ても動かないと思います
 
-言語の表現能力はC言語程度です
+言語の表現能力はC言語に劣る程度です
 書けるけど未実装の機能もあります
 forとかswitchはありません
 
